sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:3: error: not found: value getNombresValeurs
val n :Int = getNombresValeurs
             ^AlgGnomeSort:6: error: value ==- is not a member of Int
	if (k==-1) {k=0}
             ^AlgGnomeSort:9: error: type mismatch;
 found   : Unit
 required: Boolean
					if (k=0) {k=1}}
                                             ^